// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveDocumentComponent component Should render without crashing when has changes 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <WithStyles(IconButton)
    disabled={false}
    id="Save"
    onClick={[Function]}
    title="Save"
  >
    <pure(SaveIcon) />
  </WithStyles(IconButton)>
</div>
`;

exports[`SaveDocumentComponent component Should render without crashing when there are no changes 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <WithStyles(IconButton)
    disabled={true}
    id="Save"
    onClick={[Function]}
    title="Save"
  >
    <pure(SaveIcon) />
  </WithStyles(IconButton)>
</div>
`;
